2006-04-19  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: Don't call shutdown directly
	from the delete_event handler, but use a periodic idle function
	that checks to insure that gnucash isn't saving the data file
	before calling shutdown.  Fixes 338952.  Also ignore repeated
	delete events if a shutdown is queued.

2006-04-19  Christian Stimming  <stimming@tuhh.de>

	* accounts/fr_CH/acctchrt_*.gnucash-xea: New French Swiss account
	templates by Jonathan Ernst.

2006-04-18  David Hampton  <hampton@employees.org>

	* src/report/report-gnome/window-report.[ch]:
	* src/gnome/top-level.c: Parse the old ~/.gnome/GnuCash MDI
	document file to see which 1.8 reports should be opened the first
	time gnucash2 starts.

2006-04-18  Christian Stimming  <stimming@tuhh.de>

	* po/fr.po: Updated French translation by Jonathan Ernst.

	* po/glossary/fr.po: Added French glossary by Jonathan Ernst
	<jonathan@ernstfamily.ch>.

2006-04-18  Derek Atkins  <derek@ihtfp.com>

	* doc/tip_of_the_day.list.in:
	  Fix a 1.8 -> 2.0 string.
	* src/report/standard-reports/register.scm:
	  Fix a string that wasn't marked for translation.

2006-04-17  Neil Williams <linux@codehelp.co.uk>

	* configure.in : Bump versions of QOF libraries.

	* lib/libqof/backend/file/qsf-xml-map.c : Refactoring common 
	code and fixing QOF_VERSION check.

	* lib/libqof/backend/file/pilot-qsf-gncCustomer.xml :
	remove gncBillTerm - isn't possible to create from 
	pilot data.
	* lib/libqof/backend/file/qsf-backend.c :
	* lib/libqof/backend/file/qsf-xml-map.c :
	* lib/libqof/backend/file/qsf-xml.c :
	* lib/libqof/backend/file/qsf-xml.h : Add control over status of 
	various objects during mapping.
	
	* lib/libqof/qof/test/Makefile.am : Remove unwanted include.
	* lib/libqof/qof/deprecated.h : Retain glib.h in QOF, not
	deprecated.

2006-04-16  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.5
