@@ -1,5 +1,10 @@
 2006-04-19  David Hampton  <hampton@employees.org>
 
+	* src/report/report-system/gnc-report.c: If the report already has
+	an id assigned (i.e. restored reports) then add it to the table
+	using that id.  Only generate ids for reports that don't have them
+	yet.
+
 	* src/gnome-utils/gnc-main-window.c: Don't call shutdown directly
 	from the delete_event handler, but use a periodic idle function
 	that checks to insure that gnucash isn't saving the data file
